<resources>
    <string name="app_name">MisLugares</string>
    <string name="title_activity_insert">Insertar Lugar</string>
    <string name="editTextNombre">Nopmbre del lugar</string>
    <string name="editTextComentario">Comentario sobre el lugar</string>
    <string name="editTextUbicacion">Ubicacion</string>
    <string name="btnSeleccionarImagen">Seleccionar Imagen</string>
    <string name="btnCapturarFoto">Capturar Foto</string>
    <string name="textViewPrevisualizacoinImagen">Previsualización de la imagen</string>
    <string name="itemAgregar">Agregar</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnPreferencias">Preferencias</string>
    <string name="prefNombre">Nombre</string>
    <string name="prefPasswd">Contraseña</string>
</resources>